[gd_scene load_steps=4 format=3 uid="uid://bdjfwsw8pmg1m"]

[ext_resource type="Script" path="res://EditQuestionProject/scripts_EditQuestionProject/page_navigation.gd" id="1_g1yib"]

[sub_resource type="LabelSettings" id="LabelSettings_gy5ph"]
font_size = 22
font_color = Color(0.568627, 0.568627, 0.568627, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nwgaq"]
font_size = 22
font_color = Color(0.568627, 0.568627, 0.568627, 1)

[node name="page_navigation" type="Node2D"]
script = ExtResource("1_g1yib")

[node name="menu_options_reference_rect" type="ReferenceRect" parent="."]
offset_left = 5.0
offset_top = 5.0
offset_right = 235.0
offset_bottom = 422.0
border_color = Color(0.188235, 0.172549, 0.172549, 1)
border_width = 5.0

[node name="reference_rect_boundary_entry" type="ReferenceRect" parent="menu_options_reference_rect"]
layout_mode = 0
offset_left = -26.0
offset_top = -28.0
offset_right = 250.0
offset_bottom = 467.0

[node name="reference_rect_boundary_4" type="ReferenceRect" parent="menu_options_reference_rect"]
layout_mode = 0
offset_left = -117.0
offset_top = -24.0
offset_right = -30.0
offset_bottom = 504.0

[node name="reference_rect_boundary_3" type="ReferenceRect" parent="menu_options_reference_rect"]
layout_mode = 0
offset_left = -30.0
offset_top = 478.0
offset_right = 273.0
offset_bottom = 570.0

[node name="reference_rect_boundary_2" type="ReferenceRect" parent="menu_options_reference_rect"]
layout_mode = 0
offset_left = 257.0
offset_top = -27.0
offset_right = 366.0
offset_bottom = 503.0

[node name="reference_rect_boundary_1" type="ReferenceRect" parent="menu_options_reference_rect"]
layout_mode = 0
offset_left = -118.0
offset_top = -95.0
offset_right = 368.0
offset_bottom = -28.0

[node name="page_label" type="Label" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 170.0
offset_bottom = 52.0
label_settings = SubResource("LabelSettings_gy5ph")

[node name="back_button" type="Button" parent="."]
offset_left = 10.0
offset_top = 56.0
offset_right = 107.0
offset_bottom = 96.0
text = "<--"

[node name="next_button" type="Button" parent="."]
offset_left = 106.0
offset_top = 56.0
offset_right = 206.0
offset_bottom = 96.0
disabled = true
text = "-->"

[node name="page_option_button" type="OptionButton" parent="."]
offset_left = 10.0
offset_top = 98.0
offset_right = 230.0
offset_bottom = 138.0

[node name="question_label" type="Label" parent="."]
offset_left = 10.0
offset_top = 165.0
offset_right = 170.0
offset_bottom = 207.0
label_settings = SubResource("LabelSettings_nwgaq")

[node name="view_all_questions" type="Button" parent="."]
offset_left = 10.0
offset_top = 304.0
offset_right = 210.0
offset_bottom = 339.0
text = "View All Questions"

[node name="add_question" type="Button" parent="."]
offset_left = 10.0
offset_top = 200.0
offset_right = 100.0
offset_bottom = 236.0
text = "Add"

[node name="delete_question" type="Button" parent="."]
offset_left = 100.0
offset_top = 200.0
offset_right = 190.0
offset_bottom = 236.0
text = "Delete"

[node name="change_question_order" type="Button" parent="."]
offset_left = 10.0
offset_top = 237.0
offset_right = 210.0
offset_bottom = 272.0
text = "Change Order"

[node name="save_question_file" type="Button" parent="."]
offset_left = 10.0
offset_top = 339.0
offset_right = 210.0
offset_bottom = 374.0
text = "Save Question File"

[node name="load_question_file" type="Button" parent="."]
offset_left = 10.0
offset_top = 374.0
offset_right = 210.0
offset_bottom = 409.0
text = "Load Question File"

[node name="delete_under_three_dialog" type="AcceptDialog" parent="."]
position = Vector2i(330, 276)
dialog_text = "You cannot have under three questions."

[node name="add_over_three_hundred_dialog" type="AcceptDialog" parent="."]
position = Vector2i(330, 276)
dialog_text = "You cannot have over three hundred questions."

[node name="save_load_error" type="AcceptDialog" parent="."]
position = Vector2i(330, 276)

[node name="overwrite_warning" type="AcceptDialog" parent="."]
title = "WARNING"
position = Vector2i(330, 276)
dialog_text = "Don't overwrite root folders"

[node name="file_dialog_save_questions" type="FileDialog" parent="."]
position = Vector2i(330, 150)
size = Vector2i(500, 400)
access = 2

[node name="file_dialog_load_questions" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(330, 150)
size = Vector2i(500, 400)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="change_question_choice" type="PopupMenu" parent="."]
position = Vector2i(330, 276)

[connection signal="mouse_entered" from="menu_options_reference_rect/reference_rect_boundary_entry" to="." method="_on_reference_rect_boundary_entry_mouse_entered"]
[connection signal="mouse_entered" from="menu_options_reference_rect/reference_rect_boundary_4" to="." method="_on_reference_rect_boundary_4_mouse_entered"]
[connection signal="mouse_entered" from="menu_options_reference_rect/reference_rect_boundary_3" to="." method="_on_reference_rect_boundary_3_mouse_entered"]
[connection signal="mouse_entered" from="menu_options_reference_rect/reference_rect_boundary_2" to="." method="_on_reference_rect_boundary_2_mouse_entered"]
[connection signal="mouse_entered" from="menu_options_reference_rect/reference_rect_boundary_1" to="." method="_on_reference_rect_boundary_1_mouse_entered"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="next_button" to="." method="_on_next_button_pressed"]
[connection signal="item_selected" from="page_option_button" to="." method="_on_page_option_button_item_selected"]
[connection signal="pressed" from="view_all_questions" to="." method="_on_view_all_questions_pressed"]
[connection signal="pressed" from="add_question" to="." method="_on_add_question_pressed"]
[connection signal="pressed" from="delete_question" to="." method="_on_delete_question_pressed"]
[connection signal="pressed" from="change_question_order" to="." method="_on_change_question_order_pressed"]
[connection signal="pressed" from="save_question_file" to="." method="_on_save_question_file_pressed"]
[connection signal="pressed" from="load_question_file" to="." method="_on_load_question_file_pressed"]
[connection signal="file_selected" from="file_dialog_save_questions" to="." method="_on_file_dialog_save_questions_file_selected"]
[connection signal="file_selected" from="file_dialog_load_questions" to="." method="_on_file_dialog_load_question_file_selected"]
[connection signal="index_pressed" from="change_question_choice" to="." method="_on_change_question_choice_index_pressed"]
